--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -363,6 +363,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "count = CountVectorizer()\n",
+    "docs = np.array(['The sun is shining',\n",
+    "                'The weather is sweet', \n",
+    "                'The sun is shining, the weather is sweet,',\n",
+    "                'and one and one is two'])\n",
+    "bag = count.fit_transform(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'the': 6, 'sun': 4, 'is': 1, 'shining': 3, 'weather': 8, 'sweet': 5, 'and': 0, 'one': 2, 'two': 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count.vocabulary_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 1 0 1 0 0]\n",
+      " [0 1 0 0 0 1 1 0 1]\n",
+      " [0 2 0 1 1 1 2 0 1]\n",
+      " [2 1 2 0 0 0 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bag.toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.   0.38 0.   0.57 0.57 0.   0.46 0.   0.  ]\n",
+      " [0.   0.38 0.   0.   0.   0.57 0.46 0.   0.57]\n",
+      " [0.   0.46 0.   0.35 0.35 0.35 0.56 0.   0.35]\n",
+      " [0.66 0.17 0.66 0.   0.   0.   0.   0.33 0.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "tfidf = TfidfTransformer(use_idf = True, \n",
+    "                        norm = 'l2',\n",
+    "                        smooth_idf = True)\n",
+    "np.set_printoptions(precision = 2)\n",
+    "print(tfidf.fit_transform(count.fit_transform(docs)).toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a film that I will promote to all who will listen.'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0, 'review'][-50:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "def preprecessor(text):\n",
+    "    text = re.sub('<[^>]*>', '', text)\n",
+    "    emoticons = re.findall('(?::|;|=)(?:-)?(?:\\)|\\(|D|P)',\n",
+    "                          text)\n",
+    "    text = (re.sub('[\\W]+',' ', text.lower())) + ' '.join(emoticons).replace('-', '')\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' to the first group my vote is eight '"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range()\n",
+    "preprecessor(df.loc[1, 'review'][-50:])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
