--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -480,23 +480,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "' to the first group my vote is eight '"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a film that i will promote to all who will listen \n",
+      " to the first group my vote is eight \n",
+      "0s high school melodrama or 70s kitsch in general \n",
+      "ther testament to what a great actor al pacino is \n",
+      "d actually and eels come one really \n"
+     ]
     }
    ],
    "source": [
-    "for i in range()\n",
-    "preprecessor(df.loc[1, 'review'][-50:])"
+    "for i in range(5):\n",
+    "    print(preprecessor(df.loc[i, 'review'][-50:]))"
    ]
   },
   {
