--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -463,14 +463,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import re\n",
-    "def preprecessor(text):\n",
+    "def preprocessor(text):\n",
     "    text = re.sub('<[^>]*>', '', text)\n",
     "    emoticons = re.findall('(?::|;|=)(?:-)?(?:\\)|\\(|D|P)',\n",
     "                          text)\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,80 @@
    ],
    "source": [
     "for i in range(5):\n",
-    "    print(preprecessor(df.loc[i, 'review'][-50:]))"
+    "    print(preprocessor(df.loc[i, 'review'][-50:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['review'] = df['review'].apply(preprocessor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def tokenizer(text):\n",
+    "    return text.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 'is', 'a', 'test', 'example']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer('This is a test example')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem.porter import PorterStemmer\n",
+    "porter = PorterStemmer()\n",
+    "def tokenizer_porter(text):\n",
+    "    return [porter.stem(word) for word in text.split()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['runner', 'like', 'run', 'and', 'thu', 'they', 'run']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer_porter('runners like running and thus they run')"
    ]
   },
   {
