--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -605,7 +605,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train = df.loc[:25000, 'review'].values\n",
+    "y_train = df.loc[:250]"
+   ]
   }
  ],
  "metadata": {
