--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -600,15 +600,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "X_train = df.loc[:25000, 'review'].values\n",
-    "y_train = df.loc[:250]"
+    "y_train = df.loc[:25000, 'sentiment'].values\n",
+    "X_test = df.loc[25000:, 'review'].values\n",
+    "y_test = df.loc[25000:, 'sentiment'].values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
