--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -628,6 +628,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidf = TfidfVectorizer(strip_accents = None, lowercase = False, preprocessor = None)\n",
+    "param_grid = [{'vect__ngram_range' : [(1,1)],\n",
+    "              'vect__stop_words' : [stop, None],\n",
+    "              'vect__tokenizer' : [tokenizer, tokenizer_porter],\n",
+    "              'clf__penalty' : ['l1', 'l2'], \n",
+    "              'clf__C' : [1.0, 10.0, 100.0]}]\n",
+    "\n",
+    "lr_tfidf = Pipeline([('vect', tfidf),\n",
+    "                    ('clf', LogisticRegression(random_state = 42, solver = 'liblinear'))])\n",
+    "gs_lr_tfidf = GridSearchCV(lr_tfidf, param_grid, scoring = 'accuracy', cv = 3, verbose = 3, n_jobs = -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 24 candidates, totalling 72 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gs_lr_tfidf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
