--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -662,7 +662,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  24 tasks      | elapsed: 13.0min\n"
      ]
     }
    ],
@@ -677,7 +678,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(gs_lr_tfi)"
+   ]
   }
  ],
  "metadata": {
