trained model sentiment analysis

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -663,12 +663,76 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  24 tasks      | elapsed: 13.0min\n"
+      "[Parallel(n_jobs=-1)]: Done  24 tasks      | elapsed: 13.0min\n",
+      "[Parallel(n_jobs=-1)]: Done  72 out of  72 | elapsed: 38.3min finished\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score=nan,\n",
+       "             estimator=Pipeline(memory=None,\n",
+       "                                steps=[('vect',\n",
+       "                                        TfidfVectorizer(analyzer='word',\n",
+       "                                                        binary=False,\n",
+       "                                                        decode_error='strict',\n",
+       "                                                        dtype=<class 'numpy.float64'>,\n",
+       "                                                        encoding='utf-8',\n",
+       "                                                        input='content',\n",
+       "                                                        lowercase=False,\n",
+       "                                                        max_df=1.0,\n",
+       "                                                        max_features=None,\n",
+       "                                                        min_df=1,\n",
+       "                                                        ngram_range=(1, 1),\n",
+       "                                                        norm='l2',\n",
+       "                                                        preprocessor=None,\n",
+       "                                                        smooth_idf=True,\n",
+       "                                                        stop_words=None,\n",
+       "                                                        strip_acc...\n",
+       "                                                'you', \"you're\", \"you've\",\n",
+       "                                                \"you'll\", \"you'd\", 'your',\n",
+       "                                                'yours', 'yourself',\n",
+       "                                                'yourselves', 'he', 'him',\n",
+       "                                                'his', 'himself', 'she',\n",
+       "                                                \"she's\", 'her', 'hers',\n",
+       "                                                'herself', 'it', \"it's\", 'its',\n",
+       "                                                'itself', ...],\n",
+       "                                               None],\n",
+       "                          'vect__tokenizer': [<function tokenizer at 0x7f6e6d83d598>,\n",
+       "                                              <function tokenizer_porter at 0x7f6e69d1cae8>]}],\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='accuracy', verbose=3)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "gs_lr_tfidf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['gs_lr_tfidf.pkl']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(gs_lr_tfidf, 'gs_lr_tfidf.pkl')"
    ]
   },
   {
@@ -678,11 +742,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import joblib\n",
-    "\n",
-    "joblib.dump(gs_lr_tfi)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
