--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -737,12 +737,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_lr_clf = gs_lr_tfidf.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from mlxtend.plotting import plot_confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9878804847806087\n",
+      "precision: 0.9876318084515976\n",
+      "recall: 0.9883370358616312\n",
+      "f1_score: 0.9879842963080462\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_prediction = best_lr_clf.predict(X_train)\n",
+    "print('Accuracy:', accuracy_score(y_train, y_prediction))\n",
+    "print('precision:', precision_score(y_train, y_prediction))\n",
+    "print('recall:', recall_score(y_train, y_prediction))\n",
+    "print('f1_score:', f1_score(y_train, y_prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "conf_mat = confusion_matrix(y_train, y_prediction)\n",
+    "p"
+   ]
   }
  ],
  "metadata": {
