--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -861,13 +861,28 @@
        "Name: 0, Length: 156, dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "false_positives[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_test_prediction = gs_lr_tfidf.predict(X_test)\n",
+    "print('test accuracy:', accuracy_score(y_test, y_test_prediction))\n",
+    "print('test recall:', recall_score(y_test, y_test_prediction))\n",
+    "print('test precision:', precision_score(y_test, y_test_prediction))\n",
+    "print('test f1 score:', f1_score(y_test, y_test_prediction))"
    ]
   },
   {
