--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -872,17 +872,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test accuracy: 0.89768\n",
+      "test recall: 0.9070742921674598\n",
+      "test precision: 0.8888625405106315\n",
+      "test f1 score: 0.8978760779303736\n"
+     ]
+    }
+   ],
    "source": [
     "y_test_prediction = gs_lr_tfidf.predict(X_test)\n",
     "print('test accuracy:', accuracy_score(y_test, y_test_prediction))\n",
     "print('test recall:', recall_score(y_test, y_test_prediction))\n",
     "print('test precision:', precision_score(y_test, y_test_prediction))\n",
     "print('test f1 score:', f1_score(y_test, y_test_prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('vectorizer',\n",
+       "                 TfidfVectorizer(analyzer='word', binary=False,\n",
+       "                                 decode_error='strict',\n",
+       "                                 dtype=<class 'numpy.float64'>,\n",
+       "                                 encoding='utf-8', input='content',\n",
+       "                                 lowercase=False, max_df=1.0, max_features=None,\n",
+       "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
+       "                                 preprocessor=None, smooth_idf=True,\n",
+       "                                 stop_words=None, strip_accents=None,\n",
+       "                                 sublinear_tf=False,\n",
+       "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                                 tokenizer=None, use_idf=True,\n",
+       "                                 vocabulary=None)),\n",
+       "                ('clf',\n",
+       "                 SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None,\n",
+       "                     coef0=0.0, decision_function_shape='ovr', degree=3,\n",
+       "                     gamma='scale', kernel='rbf', max_iter=-1,\n",
+       "                     probability=False, random_state=42, shrinking=True,\n",
+       "                     tol=0.001, verbose=False))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "pipe_line_svm = Pipeline([('vectorizer', tfidf),\n",
+    "                         ('clf', SVC(kernel = 'rbf', random_state = 42))])\n",
+    "pipe_line_svm.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pipe_line_svm.pkl']"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(pipe_line_svm, 'pipe_line_svm.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_prediction = pipe_line_svm.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['svm_predictions.pkl']"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(y_prediction, 'svm_predictions.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9915603375864965\n",
+      "precision: 0.9905010686297792\n",
+      "recall: 0.992780069819105\n",
+      "f1_score: 0.9916392598169355\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy:', accuracy_score(y_train, y_prediction))\n",
+    "print('precision:', precision_score(y_train, y_prediction))\n",
+    "print('recall:', recall_score(y_train, y_prediction))\n",
+    "print('f1_score:', f1_score(y_train, y_prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQMAAAEGCAYAAABhHPB4AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjMsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy+AADFEAAASmElEQVR4nO3de5xO5d7H8c/PDJOhHEKHQTTIoSdk\nUNvhqTailA6OZfeodHqSTltS0dOWRKVS9o5KdNiNQ0ciyVNpTzRGCkU1OWSozdBG7BzGtf+Yy5gx\np3ti3Yvxfb9e85q1rnX6rRfzvde61lr3MuccIiJlwi5ARI4MCgMRARQGIuIpDEQEUBiIiBcbdgG5\nWWx5Z3EnhF2GlEDzhrXCLkFKYO3aNWRmZlpB046sMIg7gbjGV4ddhpRAyoIxYZcgJdCmdVKh03Sa\nICKAwkBEPIWBiAAKAxHxFAYiAigMRMRTGIgIoDAQEU9hICKAwkBEPIWBiAAKAxHxFAYiAigMRMRT\nGIgIoDAQEU9hICKAwkBEPIWBiAAKAxHxFAYiAigMRMRTGIgIoDAQEU9hICKAwkBEPIWBiAAKAxHx\nFAYiAigMRMRTGIgIoDAQEU9hICKAwkBEPIWBiAAKAxHxFAYiAigMRMRTGIgIoDAQEU9hICKAwkBE\nPIWBiAAKAxHxFAYiAigMRMRTGIgIoDAQEU9hICIAxIZdwNHiuaG96NK2MZt++ZWk3o8B8MjAS7io\nXWN278lidcZmbvzL62z99TcuaNWA4QMuplzZWHbv2ct9Y2fwSVo6FePj+PD5ATnrTKhRieTZXzBo\nzNuMvrMb7ZPqARAfV5bqVY/nlAvuD2VfS7ub+l/H7FkzqV6jBou/XA7AkMGDmPXeDMqVLUfdxEQm\nvPASlStXBuCxUSOZ9NKLxMTE8MSTY+nY6cIwyw+MOeeCW7lZZ+BpIAZ4wTn3aFHzl6lwkotrfHVg\n9RyKNs1PZ8fOXbzw0FU5YfDH1g34OC2drKx9PDygKwAPPDuTpg0S2LhlOz9lbqNx4snMGHsTiRc/\nlG+dKS/fyT1PvkPKklV52m/p2ZamZyRw8/Apwe/YIfplwZiwSyixf3w6nwoVKtL/umtywuDDuR9w\n3vkXEBsby/1DBgMwYuQoVnzzDf/Ttw+fLkjlpw0buKhzB5Z98x0xMTFh7sLv1qZ1EosXp1lB0wI7\nTTCzGGAc0AVoDPQxs8ZBbS9oKUtWsWXbzjxt8z7/jqysfQCkLl9LwkmVAPjqu/X8lLkNgG9++Jnj\n4spSrmze/zz1alenRtWK+YIAoOeFzZk6Z0kQuyFA23btqVq1ap62Dh07ERubfaDcqvU5rM/IAGDm\njHfo0as3cXFx1Klbl8TEeixKTY16zdEQZJ9BKyDdObfKObcbSAa6Bbi9UF1zaSvmfLYyX/vlF5zF\nl99msHtPVp72Hp2aM33ul/nmr31yFU479UQ+Tvs+sFqlaC9PmsiFnbsAsH79emrWrJUzLSGhJhs2\nrA+rtEAFGQYJwLpc4xm+LQ8zu9HM0swsze39d4DlBOeeazuQtXcfybMX52lvdPpJPHxbVwY8Mi3f\nMj06Nivw079Hp+a8Pe8r9u0L7vRNCjdq5AhiYmPpfdWReboapNCvJjjnJjjnkpxzSRZbPuxySqxv\n15Zc1LYx/Ya+mqc9oUYlpoy+lv4P/p3V6zfnmfZf9U8lNqYMS1Zm5Ftf907NmPqBThHC8MrkScx6\nbyaTXn4Ns+zT6oSEBDIyDnymrV+fwamn5vtMKxWCDIP1QK1c4zV9W6nR8dyG3PWn8+l+94v8e9ee\nnPZKFY/jzSdvYOi491iwdE2+5Xpe2LzAP/gGp9WgyvHxLCxgGQnWB3PeZ8wTo5n+1rvEx8fntF/c\n9VKmTUlm165drFm9mvT072nZqlWIlQYnyEuLi4D6ZlaX7BDoDVwV4PYCNfnhvrRrUY9qlSuQPnMY\nwyfMYVC/PxJXLoaZ424GIHXZWgY+Op2be7YlsdaJDOnfiSH9OwFwyYDxbPrlVwCu7NCMy25/Pt82\nenRqzrS5OioI2jV9+/DpJx+TmZlJYp2aDB32EI+NHsmuXbvo2rkjkN2J+Mxfn6NxkyZc2aMnzc9q\nTGxsLE+NHXfUXkkoTtCXFi8CniL70uJE59yIouY/ki8tSsGOxkuLx7KiLi0GetORc24WMCvIbYjI\n4RF6B6KIHBkUBiICKAxExFMYiAigMBART2EgIoDCQEQ8hYGIAAoDEfEUBiICKAxExFMYiAigMBAR\nT2EgIoDCQEQ8hYGIAAoDEfEUBiICKAxExFMYiAigMBART2EgIoDCQEQ8hYGIAAoDEfEUBiICKAxE\nxCv0XYtmth3Y/1bW/S9qdH7YOedOCLg2EYmiQsPAOXd8NAsRkXBFdJpgZm3N7Fo/XM3M6gZblohE\nW7FhYGYPAoOBIb6pHPBqkEWJSPRFcmRwOXApsAPAObcB0CmESCkTSRjsds45fGeimVUItiQRCUMk\nYTDVzMYDlc3sBuBD4PlgyxKRaCv0asJ+zrnHzawjsA1oAAxzzs0NvDIRiapiw8BbBpQn+1RhWXDl\niEhYIrma0B9IBa4AugMLzey6oAsTkeiK5MhgENDcObcZwMxOBD4DJgZZmIhEVyQdiJuB7bnGt/s2\nESlFino24S4/mA58bmbvkN1n0A1YGoXaRCSKijpN2H9j0Q/+Z793gitHRMJS1INKD0WzEBEJV7Ed\niGZWHbgHaAIct7/dOXdBgHWJSJRF0oH4GrASqAs8BKwBFgVYk4iEIJIwONE59yKwxzn3iXPuOkBH\nBSKlTCT3Gezxv38ys4uBDUDV4EoSkTBEEgYPm1kl4G7gGeAE4M5AqxKRqIvkQaWZfnArcH6w5YhI\nWIq66egZDnwhaj7OuYGHu5jmDWuRsmDM4V6tBKhKywFhlyAlsOvbHwudVtSRQdrhL0VEjlRF3XQ0\nOZqFiEi49BIVEQEUBiLiKQxEBIjsm44amNk8M1vux88ysweCL01EoimSI4PnyX6Byh4A59xSoHeQ\nRYlI9EUSBvHOudSD2vYGUYyIhCeSMMg0s0QOvESlO/BToFWJSNRF8mzCrcAEoKGZrQdWA30DrUpE\noi6SZxNWAR38a9XKOOe2F7eMiBx9Ivmmo2EHjQPgnPtLQDWJSAgiOU3YkWv4OKArsCKYckQkLJGc\nJjyRe9zMHgfmBFaRiITi99yBGA/UPNyFiEi4IukzWMaB7zWIAaoD6i8QKWUi6TPommt4L/BP55xu\nOhIpZYoMAzOLAeY45xpGqR4RCUmRfQbOuSzgWzOrHaV6RCQkkZwmVAG+NrNUcl1mdM5dGlhVIhJ1\nkYTB0MCrEJHQRRIGFznnBuduMLNRwCfBlCQiYYjkPoOOBbR1OdyFiEi4inpvwi3A/wKnm9nSXJOO\nB1KCLkxEoquo04S/A7OBkcC9udq3O+e2BFqViERdUe9N2Er2K9X6RK8cEQmLvh1ZRACFgYh4CgMR\nARQGIuIpDEQEUBiIiKcwEBFAYSAinsJARACFgYh4CgMRARQGIuIpDEQEUBiIiKcwEBFAYSAinsJA\nRACFgYh4CgMRARQGIuIpDEQEUBiIiKcwEBFAYXDYPTv2aVo0O5OzmzbhmaefAuCN6dM4u2kT4suV\nYXFaWsgVHjuee/Bq1s4bSdq0+3LaHrnjMr588wFSpwxhyhM3UKlieQBqn1KVLQvGsDD5XhYm38vY\n+3vnLPN/t17C97OHsynliTzr79+9LYum3sfC5HuZN/FOGp5+cnR2LCCBhYGZTTSzjWa2PKhtHGm+\nXr6clyY+z6efpZK6+Ctmz5rJD+npNGlyJslT36Rtu/Zhl3hMeWXGQrrdOi5P27yFK2nR4xFa9RrJ\n92s3Mui6TjnTVmVkck7vRzmn96MMHJGc0z5r/jLa/emxfOufMjuNlj0f4ZzejzJm8oeMuuuK4HYm\nCoI8MpgEdA5w/UeclStX0LJla+Lj44mNjaVd+//m7bffpGGjRjQ444ywyzvmpHzxA1u27szTNm/h\nSrKy9gGQumw1CSdVLnY9qcvW8HPmtnzt23f8ljNcoXw5HO4QKw5XYGHgnJsPHFPvZGzS5ExSUj5l\n8+bN7Ny5k/dnzyJj3bqwy5JCXNPtXOakfJMzXifhRBa8PpgPXridNs0TI1rHTT3b8/W7DzLi9su4\ne/T0oEqNiqJevBoVZnYjcCNArdq1Q67m0DRs1Ii7/zyYS7p0Ir5CBZo2bUZMTEzYZUkB7rn+QrKy\n9pE8axEAP2duo0GXYWzZuoPmjWoxdcyNnN19RJ5P/4KMnzqf8VPn06tzEvf278wNw16JRvmBCL0D\n0Tk3wTmX5JxLql6tetjlHLJ+113PZ6mL+fCj+VSuUoX69RuEXZIcpO8lrbmo/Zn0u39STtvuPXvZ\nsnUHAEtWrGNVRib1T6sR8TqnzlnMJeeddbhLjarQw6C02bhxIwA//vgj77z9Jr36XBVyRZJbxz80\n4q5+Heh+x3j+/duenPZqVSpSpowB2acL9WpXZ3VGZpHrSqx94MOrS7smpK/bFEzRURL6aUJp06fn\nlWzZspmysWV5auw4KleuzDtvv8Vdd9xG5qZNXNHtYs5q2owZs+aEXWqpN3lkP9q1qE+1yhVJf384\nw5+bxaBrOxFXLpaZfxsAZHcODhyRTNuz6zH0lovZszeLffsct41I5pdt2Z2PI27vRq8uScQfV5b0\n94fz0lsLGDF+Frf0as/5rRuyZ28W/9q2kxuGvhzm7h4ycy6YHlAzex04D6gG/BN40Dn3YlHLtGiR\n5FI+13X4o0mVlgPCLkFKYNe3U9m3c6MVNC2wIwPnXJ+g1i0ih5/6DEQEUBiIiKcwEBFAYSAinsJA\nRACFgYh4CgMRARQGIuIpDEQEUBiIiKcwEBFAYSAinsJARACFgYh4CgMRARQGIuIpDEQEUBiIiKcw\nEBFAYSAinsJARACFgYh4CgMRARQGIuIpDEQEUBiIiKcwEBFAYSAinsJARACFgYh4CgMRARQGIuIp\nDEQEUBiIiKcwEBFAYSAinsJARACFgYh4CgMRARQGIuIpDEQEUBiIiKcwEBFAYSAinsJARACFgYh4\nCgMRARQGIuIpDEQEAHPOhV1DDjPbBKwNu44AVAMywy5CSqS0/pud5pyrXtCEIyoMSiszS3POJYVd\nh0TuWPw302mCiAAKAxHxFAbRMSHsAqTEjrl/M/UZiAigIwMR8RQGIgIoDAJlZp3N7FszSzeze8Ou\nR4pnZhPNbKOZLQ+7lmhTGATEzGKAcUAXoDHQx8wah1uVRGAS0DnsIsKgMAhOKyDdObfKObcbSAa6\nhVyTFMM5Nx/YEnYdYVAYBCcBWJdrPMO3iRyRFAYiAigMgrQeqJVrvKZvEzkiKQyCswiob2Z1zawc\n0Bt4N+SaRAqlMAiIc24vMACYA6wApjrnvg63KimOmb0OLADOMLMMM7s+7JqiRbcjiwigIwMR8RQG\nIgIoDETEUxiICKAwEBFPYXAMM7Nf/e9TzWx6MfPeYWbxJVz/eWY2M9L2g+bpZ2bPlnB7a8ysWkmW\nkQMUBqWMf1qyRJxzG5xz3YuZ7Q6gRGEgRxeFwVHCzOqY2Uoze83MVpjZ9P2f1P4TcZSZfQH0MLNE\nM3vfzBab2adm1tDPV9fMFpjZMjN7+KB1L/fDMWb2uJktN7OlZnabmQ0ETgU+MrOP/Hyd/Lq+MLNp\nZlbRt3f2dX4BXBHBfrXy61liZp+Z2Rm5Jtcys4/N7HszezDXMn3NLNXMvjSz8b8nAKUAzjn9HAU/\nQB3AAW38+ETgz354DXBPrnnnAfX9cGvg//3wu8A1fvhW4Ndc617uh28BpgOxfrxqrm1U88PVgPlA\nBT8+GBgGHEf2k5r1AQOmAjML2Jfz9rcDJ+TaVgfgDT/cD/gJOBEoDywHkoBGwAygrJ/vr7n2KadG\n/ZT8J/Z35IeEZ51zLsUPvwoMBB7341MA/Cf0H4BpZrZ/uTj/uw1wpR9+BRhVwDY6AM+57Nupcc4V\n9Gz/OWR/YUuK30Y5sm/hbQisds5972t5FbixmH2qBEw2s/pkh13ZXNPmOuc2+3W9CbQF9gItgEV+\n2+WBjcVsQyKgMDi6HHzveO7xHf53GeBfzrlmEa7j9zCy/1D75Gk0K2ybRRkOfOScu9zM6gAf55pW\n0P4aMNk5N+R3bEuKoD6Do0ttMzvXD18F/OPgGZxz24DVZtYDwLI19ZNTyH56EuDqQrYxF7jJzGL9\n8lV9+3bgeD+8EGhjZvX8PBXMrAGwEqhjZol+vjxhUYhKHHi0u99B0zqaWVUzKw9c5uufB3Q3sxr7\n6zOz0yLYjhRDYXB0+Ra41cxWAFWAvxUy39XA9Wb2FfA1B75u7Xa//DIK/9alF4AfgaV++at8+wTg\nfTP7yDm3iew/3NfNbCn+FME59xvZpwXv+Q7ESA7fRwMjzWwJ+Y9UU4E3gKVk9yWkOee+AR4APvDb\nngucEsF2pBh6avEo4Q+hZzrnzgy5FCmldGQgIoCODETE05GBiAAKAxHxFAYiAigMRMRTGIgIAP8B\ni4j0SP9ydigAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<Figure size 432x288 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "conf_mat = confusion_matrix(y_train, y_prediction)\n",
+    "plot_confusion_matrix(conf_mat)\n",
+    "plt.show()"
    ]
   },
   {
