--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.columns = ['review', 'sentiment']"
@@ -463,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -503,7 +505,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['review'] = df['review'].apply(preprocessor)"
@@ -511,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -543,8 +547,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from nltk.stem.porter import PorterStemmer\n",
@@ -575,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +590,7 @@
        "['runner', 'like', 'run', 'run', 'lot']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -812,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "false_positives = X_train[(y_train == 0) & (y_prediction == 1)]\n",
@@ -940,28 +948,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['pipe_line_svm.pkl']"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "joblib.dump(pipe_line_svm, 'pipe_line_svm.pkl')"
+    "import joblib\n",
+    "#joblib.dump(pipe_line_svm, 'pipe_line_svm.pkl')\n",
+    "pipe_line_svm = joblib.load('pipe_line_svm.pkl') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_prediction = pipe_line_svm.predict(X_train)"
@@ -1053,6 +1054,82 @@
     "joblib.dump(y_train, 'y_train.pkl')\n",
     "joblib.dump(X_test, 'X_test.pkl')\n",
     "joblib.dump(y_test, 'y_test.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "param_grid = [{'vectorizer__ngram_range' : [(1,1)],\n",
+    "              'vectorizer__stop_words' : [stop, None],\n",
+    "              'vectorizer__tokenizer' : [tokenizer, tokenizer_porter],\n",
+    "              'clf__C' : [1.0, 10.0, 100.0]}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['cv', 'error_score', 'estimator__memory', 'estimator__steps', 'estimator__verbose', 'estimator__vectorizer', 'estimator__clf', 'estimator__vectorizer__analyzer', 'estimator__vectorizer__binary', 'estimator__vectorizer__decode_error', 'estimator__vectorizer__dtype', 'estimator__vectorizer__encoding', 'estimator__vectorizer__input', 'estimator__vectorizer__lowercase', 'estimator__vectorizer__max_df', 'estimator__vectorizer__max_features', 'estimator__vectorizer__min_df', 'estimator__vectorizer__ngram_range', 'estimator__vectorizer__norm', 'estimator__vectorizer__preprocessor', 'estimator__vectorizer__smooth_idf', 'estimator__vectorizer__stop_words', 'estimator__vectorizer__strip_accents', 'estimator__vectorizer__sublinear_tf', 'estimator__vectorizer__token_pattern', 'estimator__vectorizer__tokenizer', 'estimator__vectorizer__use_idf', 'estimator__vectorizer__vocabulary', 'estimator__clf__C', 'estimator__clf__break_ties', 'estimator__clf__cache_size', 'estimator__clf__class_weight', 'estimator__clf__coef0', 'estimator__clf__decision_function_shape', 'estimator__clf__degree', 'estimator__clf__gamma', 'estimator__clf__kernel', 'estimator__clf__max_iter', 'estimator__clf__probability', 'estimator__clf__random_state', 'estimator__clf__shrinking', 'estimator__clf__tol', 'estimator__clf__verbose', 'estimator', 'iid', 'n_jobs', 'param_grid', 'pre_dispatch', 'refit', 'return_train_score', 'scoring', 'verbose'])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search_cv.get_params().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "grid_search_cv = GridSearchCV(estimator = pipe_line_svm, param_grid=param_grid,cv = 3, scoring = 'accuracy', verbose = 3, n_jobs = -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid_search_cv.fit(X_train, y_train)"
    ]
   },
   {
