--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "['runner', 'like', 'run', 'and', 'thu', 'they', 'run']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "['runner', 'like', 'run', 'run', 'lot']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -948,8 +948,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import joblib\n",
@@ -1058,48 +1060,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import joblib\n",
+    "X_train = joblib.load('X_train.pkl')\n",
+    "y_train = joblib.load('y_train.pkl')\n",
+    "X_test = joblib.load('X_test.pkl')\n",
+    "y_test = joblib.load('y_test.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "param_grid = [{'vectorizer__ngram_range' : [(1,1)],\n",
     "              'vectorizer__stop_words' : [stop, None],\n",
     "              'vectorizer__tokenizer' : [tokenizer, tokenizer_porter],\n",
-    "              'clf__C' : [1.0, 10.0, 100.0]}]"
+    "              'clf__C' : [.1, 1, 10]}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['cv', 'error_score', 'estimator__memory', 'estimator__steps', 'estimator__verbose', 'estimator__vectorizer', 'estimator__clf', 'estimator__vectorizer__analyzer', 'estimator__vectorizer__binary', 'estimator__vectorizer__decode_error', 'estimator__vectorizer__dtype', 'estimator__vectorizer__encoding', 'estimator__vectorizer__input', 'estimator__vectorizer__lowercase', 'estimator__vectorizer__max_df', 'estimator__vectorizer__max_features', 'estimator__vectorizer__min_df', 'estimator__vectorizer__ngram_range', 'estimator__vectorizer__norm', 'estimator__vectorizer__preprocessor', 'estimator__vectorizer__smooth_idf', 'estimator__vectorizer__stop_words', 'estimator__vectorizer__strip_accents', 'estimator__vectorizer__sublinear_tf', 'estimator__vectorizer__token_pattern', 'estimator__vectorizer__tokenizer', 'estimator__vectorizer__use_idf', 'estimator__vectorizer__vocabulary', 'estimator__clf__C', 'estimator__clf__break_ties', 'estimator__clf__cache_size', 'estimator__clf__class_weight', 'estimator__clf__coef0', 'estimator__clf__decision_function_shape', 'estimator__clf__degree', 'estimator__clf__gamma', 'estimator__clf__kernel', 'estimator__clf__max_iter', 'estimator__clf__probability', 'estimator__clf__random_state', 'estimator__clf__shrinking', 'estimator__clf__tol', 'estimator__clf__verbose', 'estimator', 'iid', 'n_jobs', 'param_grid', 'pre_dispatch', 'refit', 'return_train_score', 'scoring', 'verbose'])"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "grid_search_cv.get_params().keys()"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "grid_search_cv = GridSearchCV(estimator = pipe_line_svm, param_grid = param_grid, verbose = 3, n_jobs = -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -1110,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1124,12 +1123,251 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  24 tasks      | elapsed: 90.1min\n",
+      "[Parallel(n_jobs=-1)]: Done  36 out of  36 | elapsed: 151.7min finished\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score=nan,\n",
+       "             estimator=Pipeline(memory=None,\n",
+       "                                steps=[('vectorizer',\n",
+       "                                        TfidfVectorizer(analyzer='word',\n",
+       "                                                        binary=False,\n",
+       "                                                        decode_error='strict',\n",
+       "                                                        dtype=<class 'numpy.float64'>,\n",
+       "                                                        encoding='utf-8',\n",
+       "                                                        input='content',\n",
+       "                                                        lowercase=False,\n",
+       "                                                        max_df=1.0,\n",
+       "                                                        max_features=None,\n",
+       "                                                        min_df=1,\n",
+       "                                                        ngram_range=(1, 1),\n",
+       "                                                        norm='l2',\n",
+       "                                                        preprocessor=None,\n",
+       "                                                        smooth_idf=True,\n",
+       "                                                        stop_words=None,\n",
+       "                                                        str...\n",
+       "                                                      \"you'll\", \"you'd\", 'your',\n",
+       "                                                      'yours', 'yourself',\n",
+       "                                                      'yourselves', 'he', 'him',\n",
+       "                                                      'his', 'himself', 'she',\n",
+       "                                                      \"she's\", 'her', 'hers',\n",
+       "                                                      'herself', 'it', \"it's\",\n",
+       "                                                      'its', 'itself', ...],\n",
+       "                                                     None],\n",
+       "                          'vectorizer__tokenizer': [<function tokenizer at 0x7fabfdffba60>,\n",
+       "                                                    <function tokenizer_porter at 0x7fabfdffbd08>]}],\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='accuracy', verbose=3)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "grid_search_cv.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['svm_grid_search.pkl']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(grid_search_cv, 'svm_grid_search.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_svm = grid_search_cv.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'clf': SVC(C=10, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "     decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
+       "     max_iter=-1, probability=False, random_state=42, shrinking=True, tol=0.001,\n",
+       "     verbose=False),\n",
+       " 'clf__C': 10,\n",
+       " 'clf__break_ties': False,\n",
+       " 'clf__cache_size': 200,\n",
+       " 'clf__class_weight': None,\n",
+       " 'clf__coef0': 0.0,\n",
+       " 'clf__decision_function_shape': 'ovr',\n",
+       " 'clf__degree': 3,\n",
+       " 'clf__gamma': 'scale',\n",
+       " 'clf__kernel': 'rbf',\n",
+       " 'clf__max_iter': -1,\n",
+       " 'clf__probability': False,\n",
+       " 'clf__random_state': 42,\n",
+       " 'clf__shrinking': True,\n",
+       " 'clf__tol': 0.001,\n",
+       " 'clf__verbose': False,\n",
+       " 'memory': None,\n",
+       " 'steps': [('vectorizer',\n",
+       "   TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "                   dtype=<class 'numpy.float64'>, encoding='utf-8',\n",
+       "                   input='content', lowercase=False, max_df=1.0, max_features=None,\n",
+       "                   min_df=1, ngram_range=(1, 1), norm='l2', preprocessor=None,\n",
+       "                   smooth_idf=True, stop_words=None, strip_accents=None,\n",
+       "                   sublinear_tf=False, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                   tokenizer=<function tokenizer at 0x7fabfdffba60>, use_idf=True,\n",
+       "                   vocabulary=None)),\n",
+       "  ('clf',\n",
+       "   SVC(C=10, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "       decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
+       "       max_iter=-1, probability=False, random_state=42, shrinking=True, tol=0.001,\n",
+       "       verbose=False))],\n",
+       " 'vectorizer': TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "                 dtype=<class 'numpy.float64'>, encoding='utf-8',\n",
+       "                 input='content', lowercase=False, max_df=1.0, max_features=None,\n",
+       "                 min_df=1, ngram_range=(1, 1), norm='l2', preprocessor=None,\n",
+       "                 smooth_idf=True, stop_words=None, strip_accents=None,\n",
+       "                 sublinear_tf=False, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                 tokenizer=<function tokenizer at 0x7fabfdffba60>, use_idf=True,\n",
+       "                 vocabulary=None),\n",
+       " 'vectorizer__analyzer': 'word',\n",
+       " 'vectorizer__binary': False,\n",
+       " 'vectorizer__decode_error': 'strict',\n",
+       " 'vectorizer__dtype': numpy.float64,\n",
+       " 'vectorizer__encoding': 'utf-8',\n",
+       " 'vectorizer__input': 'content',\n",
+       " 'vectorizer__lowercase': False,\n",
+       " 'vectorizer__max_df': 1.0,\n",
+       " 'vectorizer__max_features': None,\n",
+       " 'vectorizer__min_df': 1,\n",
+       " 'vectorizer__ngram_range': (1, 1),\n",
+       " 'vectorizer__norm': 'l2',\n",
+       " 'vectorizer__preprocessor': None,\n",
+       " 'vectorizer__smooth_idf': True,\n",
+       " 'vectorizer__stop_words': None,\n",
+       " 'vectorizer__strip_accents': None,\n",
+       " 'vectorizer__sublinear_tf': False,\n",
+       " 'vectorizer__token_pattern': '(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       " 'vectorizer__tokenizer': <function __main__.tokenizer>,\n",
+       " 'vectorizer__use_idf': True,\n",
+       " 'vectorizer__vocabulary': None,\n",
+       " 'verbose': False}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_svm.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = best_svm.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['best_svm_predictions.pkl']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(y_pred, 'best_svm_predictions.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n",
+      "precision: 1.0\n",
+      "recall: 1.0\n",
+      "f1_score: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy:', accuracy_score(y_train, y_pred))\n",
+    "print('precision:', precision_score(y_train, y_pred))\n",
+    "print('recall:', recall_score(y_train, y_pred))\n",
+    "print('f1_score:', f1_score(y_train, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test_pred = best_svm.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9022\n",
+      "Precision: 0.8914411579609818\n",
+      "Recall: 0.9140921190610631\n",
+      "F1 score 0.9026245569317775\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy:', accuracy_score(y_test, y_test_pred))\n",
+    "print('Precision:', precision_score(y_test, y_test_pred))\n",
+    "print('Recall:', recall_score(y_test, y_test_pred))\n",
+    "print('F1 score', f1_score(y_test, y_test_pred))"
    ]
   },
   {
