--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1649,7 +1649,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pipe_line_gb = "
+   ]
   }
  ],
  "metadata": {
