--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1632,14 +1632,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipe_line = Pipeline([('vect', tfidf), ('clf', MultinomialNB())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('vect',\n",
+       "                 TfidfVectorizer(analyzer='word', binary=False,\n",
+       "                                 decode_error='strict',\n",
+       "                                 dtype=<class 'numpy.float64'>,\n",
+       "                                 encoding='utf-8', input='content',\n",
+       "                                 lowercase=False, max_df=1.0, max_features=None,\n",
+       "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
+       "                                 preprocessor=None, smooth_idf=True,\n",
+       "                                 stop_words=None, strip_accents=None,\n",
+       "                                 sublinear_tf=False,\n",
+       "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                                 tokenizer=None, use_idf=True,\n",
+       "                                 vocabulary=None)),\n",
+       "                ('clf',\n",
+       "                 MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe_line.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_prediction = pipe_line.predict(X_train)"
    ]
   },
   {
@@ -1649,9 +1707,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "pipe_line_gb = "
-   ]
+   "source": []
   }
  ],
  "metadata": {
