uppdated sentiment analysis

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1691,13 +1691,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "y_prediction = pipe_line.predict(X_train)"
+    "y_pred = pipe_line.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9128834846606135\n",
+      "precision: 0.9276456111566858\n",
+      "recall: 0.8971754998413202\n",
+      "f1_score: 0.9121561668145518\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy:', accuracy_score(y_train, y_pred))\n",
+    "print('precision:', precision_score(y_train, y_pred))\n",
+    "print('recall:', recall_score(y_train, y_pred))\n",
+    "print('f1_score:', f1_score(y_train, y_pred))"
    ]
   },
   {
