--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1730,7 +1730,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "conf_mat = confusion_matrix(y_)"
+   ]
   }
  ],
  "metadata": {
