--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1725,14 +1725,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQMAAAEGCAYAAABhHPB4AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjMsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy+AADFEAAAT4UlEQVR4nO3dfZxPZf7H8ddnZuSuhIbd0GAjd5Wb\nMERLpTbVsqTcVlpbbWl166a22O7TT2l18yttyka0xC6yrLDZhsEwQsm6j9FiwtBMYbj2j+9lGncz\nX9b5Hsb7+XjMY865zs31OY/hPedcc873mHMOEZG4sAsQkVODwkBEAIWBiHgKAxEBFAYi4iWEXUB+\nllDS2VnnhF2GHIeGdZLCLkGOw4YN68nMzLSjLTu1wuCscyhe65awy5DjkDL/tbBLkOPQIrnxMZfp\nMkFEAIWBiHgKAxEBFAYi4ikMRARQGIiIpzAQEUBhICKewkBEAIWBiHgKAxEBFAYi4ikMRARQGIiI\npzAQEUBhICKewkBEAIWBiHgKAxEBFAYi4ikMRARQGIiIpzAQEUBhICKewkBEAIWBiHgKAxEBFAYi\n4ikMRARQGIiIpzAQEUBhICKewkBEAIWBiHgKAxEBFAYi4ikMRARQGIiIpzAQEUBhICKewkBEAIWB\niHgKAxEBFAYi4ikMRARQGIiIpzAQEUBhICKewkBEAIVB1N4c1J0NM58nbdxjeW0d2zRk0fjfk71o\nGI3qJuW1J51fnu3zXiZ17ABSxw5g2O+75C37Q+9fsurvT7Mt5aVD9t/jl8l8Pev5vG16dmge/EGd\nwYa9MpRG9etxWYOLua1HV3744Qdmz5pJ8yaNSL6sAVe1asma1asB+OPQl2l4aV2aNLyUttdezYYN\nG0KuPhiBhoGZXWdmK81stZkNCLKvoL0/OZX2vV8/pO2LNZvp8vDbfLZ4zRHrr92USbMuL9Csywv0\neXZsXvvUOcu44tb/O2ofH01fnLfNexPnndwDkDwZGRm88fowUlLTWLRkOfv372fch2Ppc989vPvn\n0cxftITOXbrxwnPPANCgYUNSUtNYmL6UDh078ftH+4V8BMEILAzMLB54HWgL1AW6mlndoPoLWsri\nNWzPyjmkbeW6LazasPW49rNg2Xr+k7nrZJYmJyA3N5fvv/8+8j0nh/MrVcLM2LUr8rPZtSuL8ytV\nAqBV6yspVaoUAE2Tm5GxaVNodQcpIcB9NwVWO+fWApjZWKA98GWAfZ4yqlU+j3lj+rM7+weefH0K\nKelHnj0crv3VDWjRqAarv95KvyEfsWnLzhhUeuapXLkyDzz4CBf9LImSJUtydZtraXPNtbzx1p/o\n0O56SpQsSZkyZfj0s9Qjtn3v3Xf4xXVtQ6g6eEFeJlQGNuab3+TbDmFmd5lZmpmludzvAywndv6T\nuYuL2g6kedfB9H9pAu8915NzSpcocJupc5ZT+4ZBNO38PDNTv+Ltp26NUbVnnh07djBl8t9YsWod\na7/eTHZONmNGj+LVPw5l4qSprFm/iVtvv4P+jzx0yHZjRo9i8aI0Hny4b0iVByv0AUTn3HDnXGPn\nXGNLKBl2OSfF3n25bM/KBiB9xUbWbsqkZtWKBW6zPSubvftyAXh34lwa1kkqcH05cbNmfkK1atWp\nUKECxYoV41e/6si8uSksW/o5TZOTAeh0c2dSU+cess3gF55l/MRJFC9ePKzSAxVkGGQAF+Sbr+Lb\nirzEcmcTF2dA5HKhRlIF1m3KLHCbnyaWyZu+sdUlrFz3n0BrPJNdcEESCxakkpOTg3OO2bNmUrtO\nXXZlZbHq3/8GYNYnM6hVuw4AS9LTue/euxk/YRIVKxYc6qezIMcMFgI1zaw6kRDoAnQLsL9AjXy+\nJ1dcVpPEsmezetrTPP3mVHZkZfNy/5tJLHc2E4b9lqUrM2jX+3VaNqrBE/fcwL7c/Rw44Pjds2PZ\nsSsy+Pjs/e3p3LYxpUoUY/W0p3l34jyefWsq93ZtzQ2tLiF3/352ZOVw56BRIR9x0dU0OZkOHTvR\nvGkjEhISqF+/Ib3uvIvKVarQ9ZabiIuLo2y5crz19ggAHhvQl+zvvqN7l5sBuCApifETJ4V5CIEw\n51xwOze7HngFiAdGOOeeLWj9uFIVXfFatwRWj5x8Oxa+FnYJchxaJDdm0aI0O9qyIM8McM5NBaYG\n2YeInByhDyCKyKlBYSAigMJARDyFgYgACgMR8RQGIgIoDETEUxiICKAwEBFPYSAigMJARDyFgYgA\nCgMR8RQGIgIoDETEUxiICKAwEBFPYSAigMJARDyFgYgACgMR8RQGIgIoDETEUxiICKAwEBFPYSAi\ngMJARLxjvmvRzHYDB9/KevBFjc5PO+dcmaNuKCKnpWOGgXPunFgWIiLhiuoywcxamtkdfjrRzKoH\nW5aIxFqhYWBmg4D+wKO+6SxgVJBFiUjsRXNm0AFoB2QDOOc2A7qEECliogmDvc45hx9MNLPSwZYk\nImGIJgz+YmZvAWXN7E7gE+DtYMsSkVg75l8TDnLODTGza4BdwEXAQOfcjMArE5GYKjQMvGVASSKX\nCsuCK0dEwhLNXxN+AywAOgKdgFQz+3XQhYlIbEVzZtAXaOic+xbAzM4D5gIjgixMRGIrmgHEb4Hd\n+eZ3+zYRKUIKejbhIT+5GphvZn8jMmbQHlgag9pEJIYKukw4eGPRGv910N+CK0dEwlLQg0pPxrIQ\nEQlXoQOIZlYB6AfUA0ocbHfOXRVgXSISY9EMII4GvgKqA08C64GFAdYkIiGIJgzOc869A+xzzn3q\nnPs1oLMCkSImmvsM9vnv35jZDcBmoHxwJYlIGKIJg2fM7FzgYeBVoAzwYKBViUjMRfOg0hQ/mQVc\nGWw5IhKWgm46epUfPxD1CM65Pie7mPq1k5id8seTvVsJULnmDxW+kpwy9ny18ZjLCjozSDv5pYjI\nqaqgm45GxrIQEQmXXqIiIoDCQEQ8hYGIANF90tFFZjbTzJb7+UvN7PHgSxORWIrmzOBtIi9Q2Qfg\nnFsKdAmyKBGJvWjCoJRzbsFhbblBFCMi4YkmDDLN7EJ+fIlKJ+CbQKsSkZiL5tmE3sBwoLaZZQDr\ngB6BViUiMRfNswlrgTb+tWpxzrndhW0jIqefaD7paOBh8wA4554KqCYRCUE0lwnZ+aZLADcCK4Ip\nR0TCEs1lwkv5581sCDA9sIpEJBQncgdiKaDKyS5ERMIVzZjBMn78XIN4oAKg8QKRIiaaMYMb803n\nAlucc7rpSKSIKTAMzCwemO6cqx2jekQkJAWOGTjn9gMrzSwpRvWISEiiuUwoB3xhZgvI92dG51y7\nwKoSkZiLJgyeCLwKEQldNGFwvXOuf/4GMxsMfBpMSSIShmjuM7jmKG1tT3YhIhKugt6bcA9wL/Az\nM1uab9E5QErQhYlIbBV0mfAB8HfgeWBAvvbdzrntgVYlIjFX0HsTsoi8Uq1r7MoRkbDo05FFBFAY\niIinMBARQGEgIp7CQEQAhYGIeAoDEQEUBiLiKQxEBFAYiIinMBARQGEgIp7CQEQAhYGIeAoDEQEU\nBiLiKQxEBFAYiIinMBARQGEgIp7CQEQAhYGIeAoDEQEUBifkvrt/Q82q59O8cf28tice60fTBvVo\n0bQhPTrfRNbOnQDs3buX3nf14vImDWiZ3IjP5vwzb5u9e/fyQO/f0vjSOjRtUI9Jf50Q60Mp0t58\nojMbpj9J2ti+eW0dr67Pog/7kT1/CI3qVMlrb1w3idTRD5M6+mHmj36Edq0vyVt2TfPafD5+AMsn\nPMYjt1+V1966SU3mvv8QqaMfZubb9/GzKomxObCABBYGZjbCzLaa2fKg+ghL11tvY/xfPz6k7cqr\n2jA37XNSFqRzYc2avDzkBQBGjvgTAHMXLmHi5Gk8PqAfBw4cAOClwc+RWKECaUtXkLp4GS1a/jy2\nB1LEvT9lIe37DD+k7Ys139Cl37t8lr72iPYWtw2lWfeXaN/nLV59tBPx8XHExRmv9OtI+/uH0/CW\nwdx8bSNqV/8JAMP638QdT4yiWfeX+HD6Ygb0ahOzYwtCkGcG7wHXBbj/0LRo+XPKlS9/SNtVba4l\nISHygqomTZqxOSMDgJVfreCK1lcCUKFiRc4tey7pi9IAGPXn93iwb+TNdXFxcZyXeHr/ZjnVpKSv\nZfuunEPaVq7fyqoN245Y9/s9+9i/PxLSxYsXw7lIe5N6SazZmMn6jO3sy93PuBnp3NjqYgAcUKZ0\nCQDKnF2Sb7btCu5gYiCwMHDOzQHOyHcyjvrzu7S5NpKDF19yKdM+nkxubi4b1q9jSfpiMjI25V1G\nPPfUQFo1b0LP7p3ZumVLmGWf8ZrUS2LRh/1IG9OXPi+MZ//+A1SqcC6btuzMWydjy04qVzgXgHuf\n+ZCJr9zJ6ikD6db2MoaMnBlW6SdF6GMGZnaXmaWZWVpm5pGJfboZMvg5EhISuKVLNwB63H4HlSpX\n5soWyTza9yGaJjcnPi6e3NxcNmdsommzy/l03kKaJDfjicf6hVz9mW3hF19zWecXaXn7UPr2vJri\nZxX0XmL4XbdWdHjgbWrc+BTvT17I4Afax6jSYIQeBs654c65xs65xomJFcIu53/ywfsj+cffP2b4\nu+9jZgAkJCTw3Isv86/5i/hg3ESysnZyYc2alD/vPEqVKsUv23cAoH3HTixdkh5m+eKtXL+V73L2\nUO/Cn7J5WxZVflI2b1nln5QlY1sWiWVLc0nNSiz84msAxs9Ip9ml1UKq+OQIPQyKik/+MY1hQ4fw\nwbi/UqpUqbz2nJwcsrOzAZg9cwYJCQnUrlMXM+MX19+Y99eFObNnUat2nTBKF6BqpfLEx0f+OyT9\ntBy1qlVkw+YdpH25kRpJFahaqTzFEuK5+ZqGfDxnOTt2f0+Zs0tQIynyC+yq5FqsXL81zEP4nxV8\nHiRH1ev27qTM+ZRvv82kXo2qDHh8EEOHDGbPnj10uDEyVtC4aTJDX32DzG1buand9cTFxXF+pUq8\n+c7IvP384Znn+W2v23m038MkJiby2lvvhHVIRdLIZ3pwxWU1SCxbmtVTBvL08Ons2JXDy490ILHc\n2UwYeidL/51Buz7Dubx+dR7peTX7cvdz4IDj/sEf8W1WJMQffHECk4fdRXx8HCMnLWDF2sjYTu9n\nxzFmcE8OHHDs3J3D3U+PDfNw/2fmDg6bnuwdm40BWgOJwBZgkHOuwH/tDRs1drNT5gdSjwTj/J/3\nLXwlOWXs+XI0B7K32NGWBXZm4JzrGtS+ReTk05iBiAAKAxHxFAYiAigMRMRTGIgIoDAQEU9hICKA\nwkBEPIWBiAAKAxHxFAYiAigMRMRTGIgIoDAQEU9hICKAwkBEPIWBiAAKAxHxFAYiAigMRMRTGIgI\noDAQEU9hICKAwkBEPIWBiAAKAxHxFAYiAigMRMRTGIgIoDAQEU9hICKAwkBEPIWBiAAKAxHxFAYi\nAigMRMRTGIgIoDAQEU9hICKAwkBEPIWBiAAKAxHxFAYiAigMRMRTGIgIoDAQEU9hICKAwkBEPIWB\niABgzrmwa8hjZtuADWHXEYBEIDPsIuS4FNWfWVXnXIWjLTilwqCoMrM051zjsOuQ6J2JPzNdJogI\noDAQEU9hEBvDwy5AjtsZ9zPTmIGIADozEBFPYSAigMIgUGZ2nZmtNLPVZjYg7HqkcGY2wsy2mtny\nsGuJNYVBQMwsHngdaAvUBbqaWd1wq5IovAdcF3YRYVAYBKcpsNo5t9Y5txcYC7QPuSYphHNuDrA9\n7DrCoDAITmVgY775Tb5N5JSkMBARQGEQpAzggnzzVXybyClJYRCchUBNM6tuZmcBXYBJIdckckwK\ng4A453KB+4DpwArgL865L8KtSgpjZmOAeUAtM9tkZr3CrilWdDuyiAA6MxART2EgIoDCQEQ8hYGI\nAAoDEfEUBmcwM/vOf69kZuMLWfcBMyt1nPtvbWZTom0/bJ2eZvbacfa33swSj2cb+ZHCoIjxT0se\nF+fcZudcp0JWewA4rjCQ04vC4DRhZtXM7CszG21mK8xs/MHf1P434mAzWwzcbGYXmtk0M1tkZv8y\ns9p+vepmNs/MlpnZM4fte7mfjjezIWa23MyWmtnvzKwPUAmYbWaz/XrX+n0tNrNxZna2b7/O17kY\n6BjFcTX1+0k3s7lmVivf4gvM7J9mtsrMBuXbpoeZLTCzJWb21okEoByFc05fp8EXUA1wQAs/PwJ4\nxE+vB/rlW3cmUNNPJwOz/PQk4DY/3Rv4Lt++l/vpe4DxQIKfL5+vj0Q/nQjMAUr7+f7AQKAEkSc1\nawIG/AWYcpRjaX2wHSiTr682wEd+uifwDXAeUBJYDjQG6gCTgWJ+vTfyHVNejfo6/q+EE8gPCc9G\n51yKnx4F9AGG+PkPAfxv6MuBcWZ2cLvi/nsL4CY//T4w+Ch9tAHedJHbqXHOHe3Z/mZEPrAlxfdx\nFpFbeGsD65xzq3wto4C7Cjmmc4GRZlaTSNgVy7dshnPuW7+vCUBLIBe4DFjo+y4JbC2kD4mCwuD0\ncvi94/nns/33OGCnc65BlPs4EUbkP2rXQxrNjtVnQZ4GZjvnOphZNeCf+ZYd7XgNGOmce/QE+pIC\naMzg9JJkZs39dDfgs8NXcM7tAtaZ2c0AFlHfL04h8vQkQPdj9DEDuNvMEvz25X37buAcP50KtDCz\nGn6d0mZ2EfAVUM3MLvTrHRIWx3AuPz7a3fOwZdeYWXkzKwn8ytc/E+hkZhUP1mdmVaPoRwqhMDi9\nrAR6m9kKoBzw/8dYrzvQy8w+B77gx49bu99vv4xjf+rSn4CvgaV++26+fTgwzcxmO+e2EfmPO8bM\nluIvEZxzPxC5LPjYDyBGc/r+IvC8maVz5JnqAuAjYCmRsYQ059yXwOPAP3zfM4Dzo+hHCqGnFk8T\n/hR6inPu4pBLkSJKZwYiAujMQEQ8nRmICKAwEBFPYSAigMJARDyFgYgA8F+X3IbAdxFW8QAAAABJ\nRU5ErkJggg==\n",
+      "text/plain": [
+       "<Figure size 432x288 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mlxtend.plotting import plot_confusion_matrix\n",
+    "conf_mat = confusion_matrix(y_train, y_pred)\n",
+    "plot_confusion_matrix(conf_mat)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "conf_mat = confusion_matrix(y_)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
