--- a/Dimensionality Reduction.ipynb
+++ b/Dimensionality Reduction.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## Steps for PCA algorithm\n",
+    "## 1) standarize the d-dimensional dataset\n",
+    "## 2) construct the covariance matrix\n",
+    "## 3) Decompose the covariance matr"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -257,6 +271,24 @@
     "X_train_std = sc.fit_transform(X_train)\n",
     "X_test_std = sc.transform(X_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
