--- a/Dimensionality Reduction.ipynb
+++ b/Dimensionality Reduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -11,12 +11,16 @@
     "## Steps for PCA algorithm\n",
     "## 1) standarize the d-dimensional dataset\n",
     "## 2) construct the covariance matrix\n",
-    "## 3) Decompose the covariance matr"
+    "## 3) Decompose the covariance matrix into its eigenvectors and eigenvalues\n",
+    "## 4) sort the eigenvalues by decreasing order to rank the corresponding eigenvectors\n",
+    "## 5) select k eigenvectors, which correspond to teh k largest eigenvalues\n",
+    "## 6) Construct a projection matrix W from the k eigenvectors\n",
+    "## 7) Multiply by the projection matrix to obtain the new dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +206,7 @@
        "4   735  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -262,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -274,20 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
