--- a/Dimensionality Reduction.ipynb
+++ b/Dimensionality Reduction.ipynb
@@ -278,10 +278,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Eigenvalues \n",
+      "[4.84274532 2.41602459 1.54845825 0.96120438 0.84166161 0.6620634\n",
+      " 0.51828472 0.34650377 0.3131368  0.10754642 0.21357215 0.15362835\n",
+      " 0.1808613 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cov_mat= np.cov(X_train_std.T)\n",
+    "eigen_value, eigen_vecs = np.linalg.eig(cov_mat)\n",
+    "print('\\nEigenvalues \\n%s' % eigen_value)"
+   ]
   },
   {
    "cell_type": "code",
